# ollama

./: .cloudbuild.yaml  .copilot-instructions  .dockerignore  .editorconfig  .env.example  .env.phase8.example  .eslintrc.cjs  .gitattributes  .gitconfig  .gitignore  .gitmessage  .gitmodules  .golangci.yaml  .logloom-cache.json  .logloomignore  .logloomrc.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .readthedocs.yaml  .spectral.yaml  0001-AMD-RX9070XT-gfx1201-RDNA4-optimizations.patch  0001-feat-vulkan-add-Vulkan-ggml-backend-packaging-discov.patch  0002-feat-vulkan-linux-windows-globs-and-helpers-for-libv.patch  0003-feat-vulkan-vendor-ggml-vulkan-backend-add-Vulkan-CM.patch  1  ACTIVATION_AND_ROLLOUT.md  AGENT.md  AGENTS.md  ARCHITECTURE.md  ARTIFACTORY_BUILD.md  AUTONOMOUS_AGENT_EXECUTION_AUTHORIZATION.md  AUTONOMOUS_AGENT_STARTUP_GUIDE.md  AUTONOMOUS_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_EXECUTION_STATUS_2026-04-18.md  AUTONOMOUS_ISSUE_FRAMEWORK.md  AUTONOMOUS_TRIAGE_AGENT_EXECUTION_REPORT.md  AUTONOMOUS_TRIAGE_COMPLETION_FINAL.md  AUTONOMOUS_TRIAGE_EXECUTION_COMPLETE.md  (+353 more)
cmake/mlx/: CMakeLists.txt  CMakePresets.json
discover/sycl_wrapper/: CMakeLists.txt  Makefile  README.md  sycl_wrapper.cpp  test_sycl_wrapper.cpp
examples/langchain-python-rag-privategpt/: .gitignore  LICENSE  README.md  constants.py  ingest.py  privateGPT.py  pyproject.toml  requirements.txt
examples/python-client/: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
lib/: CMakeLists.txt  README.md  binding.cpp  binding.h  model_prompts.json
llama/: .gitignore  CMakeLists.txt  Dockerfile  MTP_PORT_PLAN.md  Makefile  README-Intel-OneApi.md  README.md  amx.cpp  amx.h  base64.hpp  build-info.cpp  build-info.cpp.in  build_cuda.ps1  build_cuda.sh  build_hipblas.sh  clip.cpp  clip.h  common.cpp  common.h  control_vectors.cpp  control_vectors.h  ggml-aarch64.c  ggml-aarch64.h  ggml-alloc.c  ggml-alloc.h  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.c  ggml-backend.cpp  ggml-backend.h  ggml-blas.cpp  ggml-blas.h  ggml-cann.h  ggml-common.h  ggml-cpp.h  ggml-cpu-aarch64.c  ggml-cpu-aarch64.cpp  ggml-cpu-aarch64.h  ggml-cpu-impl.h  ggml-cpu-quants.c  (+120 more)
llama/binding/: binding.cpp  binding.h
llama/cmd/: main.go
llama/compat/: 001-llama-cpp-hooks.patch  002-gguf-big-endian-byteswap.patch  002-llama-cpp-ui-empty-assets.patch  003-tensor-data-big-endian-byteswap.patch  004-windows-utf8-paths.patch  README.md  apply-patch.cmake  compat.cmake  llama-cpp-hooks.patch  llama-cpp-ui-host-tool.patch  llama-ollama-compat-test.cpp  llama-ollama-compat-util.cpp  llama-ollama-compat-util.h  llama-ollama-compat.cpp  llama-ollama-compat.h  upstream-edits.patch
llama/example/: README.md  main.go
llama/ggml-cann/: acl_tensor.cpp  acl_tensor.h  aclnn_ops.cpp  aclnn_ops.h  common.h  ggml-cann.cpp
llama/ggml-cuda/: acc.cu  acc.cuh  alibi.cu  alibi.cuh  arange.cu  arange.cuh  argmax.cu  argmax.cuh  argsort.cu  argsort.cuh  binbcast.cu  binbcast.cuh  clamp.cu  clamp.cuh  common.cuh  concat.cu  concat.cuh  conv-transpose-1d.cu  conv-transpose-1d.cuh  convert.cu  convert.cuh  count-equal.cu  count-equal.cuh  cpy.cu  cpy.cuh  cross-entropy-loss.cu  cross-entropy-loss.cuh  dequantize.cuh  diagmask.cu  diagmask.cuh  dmmv.cu  dmmv.cuh  fattn-common.cuh  fattn-tile-f16.cu  fattn-tile-f16.cuh  fattn-tile-f32.cu  fattn-tile-f32.cuh  fattn-vec-f16.cu  fattn-vec-f16.cuh  fattn-vec-f32.cu  (+49 more)
llama/grammar/: grammar_test.go
llama/llama.cpp/: .rsync-filter  LICENSE
llama/llamafile/: sgemm.h
llama/llava/: README.md  main.go
llama/make/: Makefile.cuda_v11  Makefile.cuda_v12  Makefile.default  Makefile.musa_v1  Makefile.ollama  Makefile.rocm  Makefile.sync  Makefile.test  common-defs.make  cuda-v11-defs.make  cuda-v12-defs.make  cuda.make  gpu.make  musa.make
llama/models/: README.md  laguna.cpp  llama-cpp-laguna.patch  models.cmake
llama/patches/: .gitignore  0001-cuda.patch  0001-ggml-backend-malloc-and-free-using-the-same-compiler.patch  0002-pretokenizer.patch  0003-clip-unicode.patch  0003-embeddings.patch  0003-metal.patch  0004-clip-unicode.patch  0004-embeddings.patch  0004-ggml-metal.patch  0004-solar-pro.patch  0005-embeddings.patch  0005-fix-deepseek-deseret-regex.patch  0005-maintain-ordering-for-rules-for-grammar.patch  0005-solar-pro.patch  0006-add-mllama-support.patch  0006-clip-unicode.patch  0006-conditional-fattn.patch  0006-fix-deepseek-deseret-regex.patch  0006-maintain-ordering-for-rules-for-grammar.patch  0006-solar-pro.patch  0007-add-mllama-support.patch  0007-add-phony-target-ggml-cpu-for-all-cpu-variants.patch  0007-add-unpad-operator.patch  0007-blas.patch  0007-maintain-ordering-for-rules-for-grammar.patch  0007-solar-pro.patch  0007-sort-devices-by-score.patch  0008-add-mllama-support.patch  0008-add-phony-target-ggml-cpu-for-all-cpu-variants.patch  0008-add-unpad-operator.patch  0008-conditional-fattn.patch  0008-ensure-KV-cache-is-fully-defragmented.patch  0008-fix-deepseek-deseret-regex.patch  0008-remove-amx.patch  0009-add-mllama-support.patch  0009-add-phony-target-ggml-cpu-for-all-cpu-variants.patch  0009-add-unpad-operator.patch  0009-blas.patch  0009-fix-deepseek-deseret-regex.patch  (+232 more)
llama/runner/: README.md  cache.go  cache_test.go  image.go  image_test.go  main.go  requirements.go  runner.go  runner_test.go  stop.go  stop_test.go
llama/server/: CMakeLists.txt  CMakePresets.json  README.md  main.go
llm/ext_server/: CMakeLists.txt  README.md  completion.js.hpp  ext_server.cpp  ext_server.h  httplib.h  index.html.hpp  index.js.hpp  json-schema-to-grammar.mjs.hpp  json.hpp  mllama.cpp  oai.hpp  server.cpp  utils.hpp
llm/ns_ext_server/: CMakeLists.txt  ext_server.cpp  ext_server.h  server.cpp  (+2 more)
runner/: .gitignore  CMakeLists.txt  README.md  darwin.go  ggml-alloc.c  ggml-alloc.h  ggml-backend.c  ggml-backend.h  ggml-cuda.cu  ggml-cuda.h  ggml-metal.h  ggml-metal.m  ggml-mpi.c  ggml-mpi.h  ggml-opencl.cpp  ggml-opencl.h  ggml.c  ggml.h  json.hpp  k_quants.c  k_quants.h  llama.cpp  llama.h  main.cpp  main.go  main.h  runner.go  unicode.h
(+7558 files in other folders)
